samples/_failures_safe/1761707738_089b53_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0fc39ed0.c: In function ‘main’:
./samples/SAFE/__tmp_0fc39ed0.c:148:20: error: missing terminating " character
  148 |             printf("No logs found for level
      |                    ^~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_0fc39ed0.c:148:13: error: expected expression at end of input
  148 |             printf("No logs found for level
      |             ^~~~~~
./samples/SAFE/__tmp_0fc39ed0.c:148:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0fc39ed0.c:148:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0fc39ed0.c:148:13: error: expected declaration or statement at end of input
